@@ -1,3 +1,11 @@
+Sat Jan 27 01:01:17 1996  Mark Eichin  <eichin@cygnus.com>
+
+	* t_kdb.c: wrap db_dbm decls and berkely_dispatch in ifdefs
+	BERK_DB_DBM.
+	(do_testing): wrap references as well.
+
+	* keytab.c (krb5_ktkdb_get_entry): use KRB5_PROTOTYPE.
+
 Wed Dec 13 09:28:33 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>
 
 	* keytab.c (krb5_ktkdb_resolve): Fix casting
